Bug 569174: [Toolsmiths] Papyrus integration of GMF Tooling - Communication diagram code regeneration
Regeneration from scratch after genextension migration
+ clean up
+ Restore MANIFEST.MF

Change-Id: I104af7f8c42180f19cfb157d345d333fb6b63c50
Signed-off-by: Etienne Allogo <etienne.allogo@artal.fr>
Signed-off-by: Vincent Lorenzo <vincent.lorenzo@cea.fr>